--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,6 +1,6 @@
-<p>
-  weather works!
-</p>
+<div *ngIf="error$ | async as error">
+  <h1 class="error-message"><mat-icon>error</mat-icon> {{ error }}</h1>
+</div>
 <div class="page">
   <mat-grid-list cols="3" rowHeight="29em">
     <mat-grid-tile *ngFor="let card of cards | async"  [colspan]="card.cols" [rowspan]="card.rows">
