--- a/src/app/card/about-mobile/about-mobile.component.html
+++ b/src/app/card/about-mobile/about-mobile.component.html
@@ -1,3 +1,21 @@
-<p>
-  about-mobile works!
-</p>
+<div class="mobile">
+  <div class="about">
+    <p> This application is built and maintained by
+      <a href="https://rhythmandbinary.com/">Andrew Evans</a>.  It was named for Andrew's wife, lovingly referred to as Goose.  The weather data is provided by
+      <a href="https://www.weather.gov/documentation/services-web-api">NOAA APIs</a>, and the
+      <a href="https://openweathermap.org/api">OpenWeatherMapAPI Service</a>.  This Application uses
+      <a href="https://ngrx.io/">NgRx</a> for state management.  It's also Open Source with the
+      <a href="https://github.com/andrewevans02/goose-weather/blob/master/LICENSE">MIT License</a>.
+      Source code can be viewed on <a href="https://github.com/andrewevans02/goose-weather">GitHub</a>.
+      The Goose image shown was made by
+      <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      and is licensed by
+      <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
+    </p>
+  </div>
+  <div class="images">
+    <img src='./assets/goose.svg'>
+    <img src='./assets/sun.svg'>
+  </div>
+</div>
